<resources>
    <string name="app_name">Dapok</string>
    <string name="password_string">Pick a password for your new account. You can\nalways change it later</string>
    <string name="username_string">Pick a username for your new account. You can\nalways change it later</string>
    <string name="details">Please fill up the details to continue.</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="menu_profile">Profile</string>

    <string name="menu_contributions">My Contributions</string>
    <string name="menu_about">About</string>


    <string name="menu_achievements">Achievements</string>
    <string name="menu_faqs">FAQs</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string-array name="languagesYouSpeak">
        <item>Filipino</item>
        <item>Cebuano</item>
        <item>Mandaya</item>
    </string-array>
    <string-array name="fluency">
        <item>Beginner</item>
        <item>Elementary</item>
        <item>Intermediate</item>
        <item>Advanced</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="educationalAttainment">
        <item>No schooling</item>
        <item>Elementary Graduate</item>
        <item>Junior High School Graduate</item>
        <item>Senior High School Graduate</item>
        <item>College Undergraduate</item>
        <item>Bachelors Degree</item>
        <item>Masters Degree</item>
        <item>Doctoral degree</item>
    </string-array>

    <string-array name="languages">
        <item>Filipino</item>
        <item>Cebuano</item>
        <item>Kagan</item>
    </string-array>
</resources>