<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/contributions"
            android:icon="@drawable/contribute"
            android:title="@string/menu_contributions" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/achievements"
            android:icon="@drawable/achievemetns"
            android:title="@string/menu_achievements" />
        <item
            android:id="@+id/faq"
            android:icon="@drawable/faqs"
            android:title="@string/menu_faqs" />
    </group>
</menu>